--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,6 @@ DATABASE_URL=""
 
 # Direct connection to the database. Used for migrations
 DIRECT_URL=""
+
+SUPABASE_URL=""
+SUPABASE_SERVICE_KEY=""
