db: still fixing vercel error

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@mantine/spotlight": "^8.3.3",
     "@mantine/tiptap": "^8.3.3",
     "@prisma/client": "^6.16.3",
+    "@prisma/nextjs-monorepo-workaround-plugin": "^6.17.0",
     "@tabler/icons-react": "^3.35.0",
     "@tiptap/extension-link": "^3.6.5",
     "@tiptap/pm": "^3.6.5",
