--- a/package.json
+++ b/package.json
@@ -36,10 +36,12 @@
     "@types/jsonwebtoken": "^9.0.10",
     "add": "^2.0.6",
     "bcrypt": "^6.0.0",
+    "clsx": "^2.1.1",
     "dayjs": "^1.11.18",
     "embla-carousel": "^8.5.2",
     "embla-carousel-react": "^8.5.2",
     "jsonwebtoken": "^9.0.2",
+    "mantine-datatable": "^8.2.0",
     "next": "15.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
