--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@tiptap/starter-kit": "^3.6.5",
     "@types/bcrypt": "^6.0.0",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/lodash": "^4.17.20",
     "add": "^2.0.6",
     "bcrypt": "^6.0.0",
     "clsx": "^2.1.1",
@@ -41,6 +42,7 @@
     "embla-carousel": "^8.5.2",
     "embla-carousel-react": "^8.5.2",
     "jsonwebtoken": "^9.0.2",
+    "lodash": "^4.17.21",
     "mantine-datatable": "^8.2.0",
     "next": "15.5.4",
     "react": "19.1.0",
