--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "biome check",
     "format": "biome format --write",
     "seed": "tsx prisma/seed.ts",
-    "test": "vitest run",
+    "test": "vitest run --reporter=verbose",
     "test:ui": "vitest --ui"
   },
   "dependencies": {
