--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "biome check",
     "format": "biome format --write",
     "seed": "tsx prisma/seed.ts",
-    "test": "vitest run --reporter=verbose",
+    "test": "vitest run --coverage",
     "test:ui": "vitest --ui"
   },
   "dependencies": {
@@ -58,6 +58,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@vitest/coverage-v8": "3.2.4",
     "@vitest/ui": "3.2.4",
     "prisma": "^6.16.3",
     "tailwindcss": "^4",
