--- a/.env.example
+++ b/.env.example
@@ -5,8 +5,8 @@ DATABASE_URL=""
 # Direct connection to the database. Used for migrations
 DIRECT_URL=""
 
-SUPABASE_URL=""
-SUPABASE_SERVICE_KEY=""
+NEXT_PUBLIC_SUPABASE_URL=""
+NEXT_PUBLIC_SUPABASE_SERVICE_KEY=""
 
 JWT_SECRET=""
 
