--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "lodash": "^4.17.21",
     "mantine-datatable": "^8.2.0",
     "next": "15.5.4",
+    "pdfjs-dist": "^5.4.296",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "recharts": "^3.2.1"
